--- a/Lab3_ProgramacionII/nbproject/private/private.properties
+++ b/Lab3_ProgramacionII/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Alberto\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\RALC\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
